--- a/task14/src/main/resources/application.properties
+++ b/task14/src/main/resources/application.properties
@@ -4,4 +4,4 @@ server.servlet.context-path=/demo
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=boot
 spring.datasource.username=postgres
-spring.datasource.password=5a2d9s4f
+spring.datasource.password=You password
